[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "pylicense3"
dynamic = ["version"]
description = "Apply license information to a git project."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
authors = [
    { name = "Rene Fritze", email = "rene.fritze@wwu.de" },
]
keywords = ["license", "headers", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "docopt-ng>=0.9.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
docs = [
    "myst-nb>=1.3.0",
    "python-slugify>=8.0.4",
    "sphinx>=7.4.0",
    "sphinx-autoapi>=3.6.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
]

[project.scripts]
pylicense3 = "pylicense3.cli:main"

[project.urls]
Homepage = "https://github.com/dune-gdt/pylicense3"
Documentation = "https://pylicense3.readthedocs.io"
Repository = "https://github.com/dune-gdt/pylicense3"
Issues = "https://github.com/dune-gdt/pylicense3/issues"

[dependency-groups]
lint = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.0",
]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
]
docs = [
    "myst-nb>=1.3.0",
    "python-slugify>=8.0.4",
    "sphinx>=7.4.0",
    "sphinx-autoapi>=3.6.0",
]
release = [
    "build>=1.2.2.post1",
    "check-manifest>=0.50",
    "readme-renderer[md]>=44.0",
    "twine>=6.1.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "release" },
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pylicense3"]

[tool.pytest.ini_options]
addopts = "--cov=pylicense3 --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["pylicense3", "tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["pylicense3", "tests", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["pylicense3"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"

[tool.uv]
default-groups = ["dev"]
